src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Bussiness_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Spice</fullName>
                    <label>Spices</label>
                </value>
                <value>
                    <fullName>Edible_Nuts</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFR_LC_Pack_Floor_Load__c</fullName>
        <label>CFR LC/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFR_LC_Pack_Pallet__c</fullName>
        <label>CFR LC/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFR_USD_Pack_Floor_Load__c</fullName>
        <label>CFR USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFR_USD_Pack_Pallet__c</fullName>
        <label>CFR USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFR_USD_lbs_Pallet__c</fullName>
        <label>CFR USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clearance_Pack_FL__c</fullName>
        <label>Clearance/ Pack (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Cost_USD_lbs__c</fullName>
        <label>Conversion Cost (USD/ lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_LC_Pack_Floor_Load__c</fullName>
        <label>DDP LC/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDP_LC_Pack_Pallet__c</fullName>
        <label>DDP LC/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDP_TCB_FL__c</fullName>
        <label>DDP (TCB) (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_TCB_PL__c</fullName>
        <label>DDP (TCB) (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_Pack_Floor_Load__c</fullName>
        <label>DDP USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_Pack_Pallet__c</fullName>
        <label>DDP USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_lbs_Floor_Load__c</fullName>
        <label>DDP USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_lbs_Pallet__c</fullName>
        <label>DDP USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dest_Clearance_Pack_PL__c</fullName>
        <label>Dest. Clearance/ Pack (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dest_Haulage_Port_WH_Pack_FL__c</fullName>
        <label>Dest. Haulage (Port - WH)/ Pack (FL).</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dest_Haulage_Port_WH_Pack_PL__c</fullName>
        <label>Dest.Haulage (Port-WH)/ Pack (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty_Pack_FL__c</fullName>
        <label>Duty/ Pack (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty_Pack_PL__c</fullName>
        <label>Duty/ Pack (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FOB_LC_Pack_Floor_Load__c</fullName>
        <label>FOB LC/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOB_LC_Pack_Pallet__c</fullName>
        <label>FOB LC/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOB_TCB__c</fullName>
        <label>FOB (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_Pack_Floor_Load__c</fullName>
        <label>FOB USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_Pack_Pallet__c</fullName>
        <label>FOB USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_lbs_Floor_Load__c</fullName>
        <label>FOB USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_lbs_Pallet__c</fullName>
        <label>FOB USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_Pack_Floor_Load__c</fullName>
        <label>FOB to DDP USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_Pack_Pallet__c</fullName>
        <label>FOB to DDP USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_lbs_Floor_Load__c</fullName>
        <label>FOB to DDP USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_lbs_Pallet__c</fullName>
        <label>FOB to DDP USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Costs_TCB__c</fullName>
        <label>Fixed Costs (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fobbing_Container__c</fullName>
        <label>Fobbing/ Container</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Container__c</fullName>
        <label>Freight/ Container</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Pack_FL__c</fullName>
        <label>Freight/ Pack (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Pack_PL_c__c</fullName>
        <label>Freight/ Pack (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMU_DDP_Floor_Loading__c</fullName>
        <label>IMU% (DDP) - Floor Loading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IMU_DDP_Pallet_Loading__c</fullName>
        <label>IMU% (DDP) - Pallet Loading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IMU_FOB__c</fullName>
        <label>IMU% (FOB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Import_Clearance_USD_Cont__c</fullName>
        <label>Import Clearance (USD/Cont)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <description>Text Box Field Inco Terms</description>
        <inlineHelpText>Enter Inco Terms</inlineHelpText>
        <label>Inco Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR - Costs and freight</fullName>
                </value>
                <value>
                    <fullName>CIF - Costs, insurance &amp; freight</fullName>
                </value>
                <value>
                    <fullName>CIP - Carriage and insurance paid</fullName>
                </value>
                <value>
                    <fullName>CPT - Carriage paid to</fullName>
                </value>
                <value>
                    <fullName>DAP - Delivered At Place</fullName>
                </value>
                <value>
                    <fullName>DDP - Delivered Duty Paid</fullName>
                </value>
                <value>
                    <fullName>EXW - Ex Works</fullName>
                </value>
                <value>
                    <fullName>FAS - Free Along Sideship</fullName>
                </value>
                <value>
                    <fullName>FCA - Free Carrier</fullName>
                </value>
                <value>
                    <fullName>FOB - Free On Board</fullName>
                </value>
                <value>
                    <fullName>DPU - Delivered At Place Unloaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Design_TCB__c</fullName>
        <label>Initial Design (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Design__c</fullName>
        <label>Initial Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Months__c</fullName>
        <label>Interest Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_TCB__c</fullName>
        <label>Interest (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_1st_PM__c</fullName>
        <label>Loss (1st PM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_2nd_PM_Carton__c</fullName>
        <label>Loss (2nd PM - Carton)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_Product__c</fullName>
        <label>Loss (Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MOQ_Packaging_1st__c</fullName>
        <label>MOQ Packaging (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_TCB__c</fullName>
        <label>Margin (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markup_W_O_Margin_USD_lbs__c</fullName>
        <label>Markup W/O Margin (USD/ lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_with_Margin_USD_lbs__c</fullName>
        <label>Markup with Margin (USD/ lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Olam_Quote_Number__c</fullName>
        <formula>Opportunity.OlamQuoteNumber__c &amp;&apos;_&apos;&amp; TEXT(Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Olam Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Olam_WH_s_Cost_USD_Pallet_Excl_PLT__c</fullName>
        <label>Olam WH&apos;s Cost (USD/Pallet) - Excl. PLT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Olam_WH_s_Cost_USD_Pallet_Incl_PLT__c</fullName>
        <label>Olam WH&apos;s Cost (USD/Pallet) - Incl. PLT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Fixed_Cost__c</fullName>
        <label>Other Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Type_1st__c</fullName>
        <label>PM Type (1st)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X1st_PM_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Packing_Cost_lbs__c</fullName>
        <label>Packing Cost ($/lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packing_TCB_c__c</fullName>
        <label>Packing (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pallet_Cost_USD_EA__c</fullName>
        <label>Pallet Cost (USD/EA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pallet_TCB_c__c</fullName>
        <label>Pallet (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>TEXT( Opportunity.Account.Payment_Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plbs_Inco_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inco Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Olam_WH_USD_Cont__c</fullName>
        <label>Port - Olam WH (USD/Cont)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processing__c</fullName>
        <label>Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_TCB__c</fullName>
        <label>Product (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotations_Given_as_Per__c</fullName>
        <label>Quotations Given as Per</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>40FT Container</fullName>
                    <default>true</default>
                    <label>40FT Container</label>
                </value>
                <value>
                    <fullName>20FT Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Processing__c</fullName>
        <label>Quote Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TCB</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TCB__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.OpportunityId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TCB__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms &amp; Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Ingredient_Price_No_Processing__c</fullName>
        <label>Total Ingredient Price (No Processing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Ingredient_Price__c</fullName>
        <label>Total Ingredient Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trucking_Pack_FL__c</fullName>
        <label>Trucking/ Pack (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trucking_to_Final_Dest_PackPL__c</fullName>
        <label>Trucking to Final Dest./ Pack(PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trucking_to_Final_Dest_Pack_FL__c</fullName>
        <label>Trucking to Final Dest./ Pack(FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH_Cost_Dest_Pack_FL__c</fullName>
        <label>WH Cost (Dest.)/ Pack (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WH_Cost_Dest_Pack_PL__c</fullName>
        <label>WH Cost (Dest.)/ Pack (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WH_to_Customer_s_DC_Cost_USD_Pallet__c</fullName>
        <label>WH to Customer&apos;s DC Cost (USD/Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_PM_Pouch_Jar_TCB__c</fullName>
        <label>1st PM (Pouch/ Jar) (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_PM_Outer_TCB__c</fullName>
        <label>2nd PM (Outer) (TCB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_PresentedToCustomer_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   ISPICKVAL(PRIORVALUE(Status),&apos;Presented To Customer&apos;),
   AND(
       NOT(ISPICKVAL(Status,&apos;Customer Accepted&apos;)),
       NOT(ISPICKVAL(Status,&apos;Customer Denied&apos;))
   )
)</errorConditionFormula>
        <errorMessage>Quote status from &apos;Presented To Customer&apos; can only be moved to &apos;Customer Accepted/Denied&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Presented_To_Customer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   ISPICKVAL(Status,&apos;Presented To Customer&apos;),
   NOT(ISPICKVAL(PRIORVALUE(Status),&apos;Approved&apos;))
)</errorConditionFormula>
        <errorMessage>Quote Status &apos;Presented To Customer&apos; can be moved if status is &apos;Approved&apos;</errorMessage>
    </validationRules>
</CustomObject>